--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,13 @@
 # Required metadata
-sonar.projectKey=RecuencoJones.CustomersDemo
-sonar.projectName=CustomersDemo
+sonar.projectKey=RecuencoJones.CustomersDemo-JS
+sonar.projectName=CustomersDemo-JS
 
 # Comma-separated paths to directories with sources
 sonar.sources=app
-sonar.exclusions=**/test/**/*,**/*.d.ts,app/Vendor.ts,**/I*.ts
+sonar.exclusions=**/test/**/*,app/Vendor.js
 
 # Language
-sonar.language=ts
-
-# TypeScript
-sonar.ts.excludetypedefinitionfiles=true
-sonar.ts.tslintconfigpath=tslint.json
-sonar.ts.tslintpath=./node_modules/.bin/tslint
+sonar.language=js
 
 # Encoding of sources files
 sonar.sourceEncoding=UTF-8
