--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "customers-demo",
+  "name": "customers-demo-js",
   "version": "1.0.0",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "npm run db & webpack-dev-server --open --hot",
     "db": "json-server assets/customer-db.js",
     "lint": "npm run lint:src && npm run lint:test",
-    "lint:src": "tslint --config tslint.json --project tsconfig.json --type-check",
-    "lint:test": "tslint --config tslint-test.json --project tsconfig-test.json --type-check",
-    "doc": "typedoc --out doc --mode file",
+    "lint:src": "eslint ./src/**/*.js",
+    "lint:test": "eslint ./test/**/*.js",
+    "doc": "jsdoc -d doc -P ./package.json -R ./README.md ./src/**/*.js",
     "test": "cross-env NODE_ENV=testing karma start test/config/karma.config.js"
   },
   "dependencies": {
@@ -20,24 +20,21 @@
     "lodash": "4.17.4"
   },
   "devDependencies": {
-    "@types/angular": "1.6.17",
-    "@types/angular-mocks": "1.5.9",
-    "@types/angular-ui-router": "1.1.36",
-    "@types/chai": "3.5.2",
-    "@types/karma-chai-sinon": "0.1.5",
-    "@types/lodash": "4.14.64",
-    "@types/mocha": "2.2.41",
-    "@types/node": "7.0.18",
-    "@types/sinon": "2.2.2",
-    "@types/sinon-chai": "2.7.27",
     "angular-mocks": "1.6.4",
     "chai": "3.5.0",
     "cross-env": "5.0.0",
     "css-loader": "0.28.1",
+    "eslint": "3.19.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-node": "4.2.2",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "3.0.1",
     "expose-loader": "0.7.3",
     "file-loader": "0.11.1",
     "html-loader": "0.4.5",
     "istanbul-instrumenter-loader": "2.0.0",
+    "jsdoc": "3.4.3",
     "json-server": "0.10.1",
     "karma": "1.7.0",
     "karma-chai": "0.1.0",
@@ -56,11 +53,6 @@
     "sinon": "2.2.0",
     "sinon-chai": "2.10.0",
     "style-loader": "0.17.0",
-    "ts-loader": "2.0.3",
-    "tslint": "5.2.0",
-    "tslint-config-standard": "5.0.2",
-    "typedoc": "0.7.0",
-    "typescript": "2.3.2",
     "url-loader": "0.5.8",
     "webpack": "2.5.1",
     "webpack-dev-server": "2.4.5"
