--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 node_js:
 - '6'
 
+addons:
+  sonarqube:
+    organization: 'recuencojones-github'
+    branches:
+      - develop
+
 install:
 - npm install
 
@@ -10,3 +16,4 @@ script:
 - npm run doc
 - npm run build
 - npm test
+- sonar-scanner
