--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=RecuencoJones.CustomersDemo-JS
 sonar.projectName=CustomersDemo-JS
 
 # Comma-separated paths to directories with sources
-sonar.sources=app
+sonar.sources=src
 sonar.exclusions=**/test/**/*,app/Vendor.js
 
 # Language
