UPDATE badges, lcov path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,4 @@ sonar.language=js
 sonar.sourceEncoding=UTF-8
 
 # Coverage
-sonar.ts.lcov.reportpath=test/results/lcov.info
+sonar.javascript.lcov.reportPath=test/results/lcov.info
